# Video-to-Retail-Platform

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  README.md  Step-by-step-start.md  environment.yml  pip_environment.yml
.github/: issue_template.md  pull_request_template.md
docker/: Dockerfile  README.md  buildpkg.txt  hysia-conda-Dockerfile  hysia-pip-Dockerfile  runtimepkg.txt
docs/: Showcase.md
docs/source/: conf.py  core.rst  cplus.rst  exceptions.rst  index.rst  install.rst  models.rst  optim.rst  product.rst  server.rst  tracking.rst
hysia/core/: __init__.py
hysia/core/monitor/bak/: CMakeLists.txt  GpuDevice.cpp  GpuDevice.h  Monitor.cpp  Resource.cpp  Resource.h  TaskResource.cpp  TaskResource.h  common.h
hysia/database/: __init__.py  sqlite.py  video_post.py
hysia/dataset/: __init__.py  download_datasets.py  (+2 more)
scripts/: build.sh  docker_entry.sh  download-data.sh  install-build.sh  run_dashboard.sh  start_model_server.sh
server/: .gitignore  README.md  _init_paths.py  manage.py  reset-db.sh  set-db.sh  start_model_servers.py
tests/: _init_paths.py  test.py  test_alignment.py  test_all.py  test_all.sh  test_build_classifier.py  test_build_feature.py  test_build_training_dataset.py  test_clipper_mmdet.py  test_ctpn_crnn.py  test_db.py  test_face_recognition.py  test_imagenet.py  test_index.py  test_mmdet.py  test_mtcnn.py  test_place365.py  test_product.py  test_ray_tf.py  test_scene_split.py  test_search.py  test_sentence.py  test_threshold.py
third/: compile.sh
v2_plugin/: .gitignore  README.md  container_starter.py
(+403 files in other folders)
